# backdoor-solver

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
SupplementaryMaterials/ECAI-2024-supplementary/: main.tex
SupplementaryMaterials/data/: results-satcomp.csv
SupplementaryMaterials/data/mult/: lec_CvK_12.cnf  lec_CvW_12.cnf  lec_DvC_12.cnf  lec_DvK_12.cnf  lec_DvW_12.cnf  lec_KvW_12.cnf
SupplementaryMaterials/scripts/: analyze-and-plot.R
lib/cadical-sys/src/: dynamic.rs
lib/cadical/src/dynamic/: cadical.rs  tests.rs
lib/cadical/src/statik/: cadical.rs  tests.rs
src/: backdoor.rs  derivation.rs  lib.rs  pool.rs  searcher.rs  solvers.rs  trie.rs  utils.rs
