[package]
name = "backdoor"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = [
    "lib/ffi-utils",
    "lib/cadical-sys",
    "lib/cadical",
]

[features]
default = []

[dependencies]
log = "0.4"
rand = "0.8"
itertools = "0.12"
rayon = "1.10"
ahash = "0.8"
crossbeam-channel = "0.5"
test-log = "0.2"
flate2 = "1.0"

ffi-utils = { path = "lib/ffi-utils" }
cadical-sys = { path = "lib/cadical-sys", features = ["static"] }
cadical = { path = "lib/cadical", features = ["static"] }

clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.11"
csv = "1.3"
indicatif = { version = "0.17", features = ["rayon"] }
ordered-float = "4.2"
